# kimi2api

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  example.py  main.py  pyproject.toml  run.py
app/: bootstrap.py  config.py  main.py
app/api/: auth.py  deps.py  models.py  routes.py  streaming.py
app/core/: auth.py  keys.py  kimi_account_store.py  kimi_token_store.py  logs.py  token_manager.py
app/dashboard/: api_routes.py  routes.py  templates.py  view_models.py
app/dashboard/templates/: admin.html
app/dashboard/templates/partials/: _stats_inner.html  (+6 more)
app/kimi/: client.py  events.py  model_catalog.py  protocol.py  transport.py
docs/superpowers/plans/: 2026-05-11-react-dashboard-review-fixes.md
kimi2api/: __init__.py  client.py  server.py
tests/: conftest.py  test_api_auth.py  test_config.py  test_dashboard_auth.py  test_dashboard_logs.py  test_dashboard_spa.py  test_dashboard_timezones.py  test_frontend_dashboard.py  test_frontend_layout.py  test_frontend_loading.py  test_frontend_log_detail.py  test_frontend_login_motion.py  test_kimi_account_pool.py  test_kimi_base_url.py  test_kimi_client.py  test_kimi_transport.py  test_log_storage.py  test_model_catalog.py  test_public_routes.py  test_request_logging.py  test_streaming_errors.py  test_token_management.py
web/: index.html
web/src/: index.css  main.tsx
web/src/hooks/: use-polling.ts
web/src/lib/: api-client.ts
web/src/pages/: DashboardPage.tsx  KeysPage.tsx  LogDetailPage.tsx  LoginPage.tsx  LogsPage.tsx  TokenPage.tsx
web/src/types/: index.ts
(+5 files in other folders)
